<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buscar"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#BE4A5EC3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:text="@string/id_usuario"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/txtidUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:hint="@string/id_usuario"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

                <Button
                    android:layout_width="109dp"
                    android:layout_height="45dp"
                    android:hint="@string/buscar1"
                    android:onClick="buscar"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/iconocontacto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"/>
            <EditText
                android:id="@+id/txtedNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_contacto"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                />
            <EditText
                android:id="@+id/txtedTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_telefono"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"/>
            <EditText
                android:id="@+id/txtedCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_correo"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domicilio"/>
            <EditText
                android:id="@+id/txtedDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_domicilio"/>
            <Button
                android:id="@+id/btnedActulizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actualizar"
                android:layout_marginTop="10dp"
                android:onClick="actualizar" />
            <Button
                android:id="@+id/btnedEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:onClick="borrar"/>
            <Button
                android:id="@+id/btnedCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:onClick="cancelar2"/>
            <Button
                android:id="@+id/btnedRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:onClick="regresarHome2"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>