<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAgenda"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#BE4A5EC3"
    android:gravity="center">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:text="@string/bienvenido"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnbuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buscar"
                android:text="@string/buscar_actualizar"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnListadecontactos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="vista"
                android:text="@string/lista_de_contactos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnagregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="irAgregarContacto"
                android:text="@string/agregar_contacto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnsalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="salir"
                android:text="@string/salir"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/agenda01"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>