<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContacto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#BE4A5EC3">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_contacto1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/iconocontacto"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_contacto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:layout_marginBottom="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_telefono">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:layout_marginBottom="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:startIconDrawable="@drawable/ic_correo"
                        android:layout_marginBottom="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textCorreo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/correo" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:startIconDrawable="@drawable/ic_domicilio">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/textDomicilio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/domicilio"
                                android:layout_marginBottom="20dp"/>

                            <Button
                                android:id="@+id/btnguardar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/guardar"
                                android:onClick="agregarUsuario"/>

                            <Button
                                android:id="@+id/btnregresar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/regresar"
                                android:onClick="regresarHome"/>
                            <Button
                                android:id="@+id/btnCancelar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cancelar"
                                android:onClick="cancelarTexto"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>